# stellopay-core

./: .gitignore  0001-fix-789-deprecation-reason.patch  CONTRIBUTING.md  ISSUE-1-MR.md  ISSUE-107.md  ISSUE_1_MR.md  PROPERTY_INVARIANT_TESTS_SUMMARY.md  PR_BODY_STELLOPAY_509.md  PR_BODY_STELLOPAY_510.md  README.md  SECURITY.md  TEST_IMPLEMENTATION_GUIDE.md  clippy.toml  deny.toml  issue-107-mr-draft.md  issue-109-mr-draft.md  rustfmt.toml
onchain/contracts/compliance_reporting/: Cargo.toml
onchain/contracts/compliance_reporting/docs/: compliance-reporting.md
onchain/contracts/compliance_reporting/src/: lib.rs
onchain/contracts/compliance_reporting/tests/: test_compliance.rs
onchain/contracts/department_manager/: Cargo.toml
onchain/contracts/department_manager/src/: lib.rs
onchain/contracts/department_manager/tests/: test_department.rs
onchain/contracts/employee_roles/: Cargo.toml
onchain/contracts/employee_roles/src/: lib.rs
onchain/contracts/employee_roles/tests/: test_roles.rs
onchain/contracts/governance/: Cargo.toml
onchain/contracts/governance/src/: lib.rs
onchain/contracts/governance/tests/: governance_tests.rs  test_governance.rs
onchain/contracts/payment_history/: Cargo.toml
onchain/contracts/payment_history/src/: events.rs  lib.rs  storage.rs
onchain/contracts/payment_history/tests/: test_history.rs
onchain/contracts/price_oracle/: Cargo.toml
onchain/contracts/price_oracle/src/: lib.rs
onchain/contracts/price_oracle/tests/: test_oracle.rs
onchain/contracts/stello_pay_contract/: Cargo.toml  MILESTONE_DOCS.md  Makefile
onchain/contracts/stello_pay_contract/benches/: critical_paths.rs  performance_benchmarks.rs
onchain/contracts/stello_pay_contract/docs/: invariant-assertions.md  stress-testing.md
onchain/contracts/stello_pay_contract/src/: audit.rs  backup.rs  compliance.rs  enterprise.rs  events.rs  governance.rs  governance_test.rs  insurance.rs  lib.rs  mock_contract.rs  payroll.rs  storage.rs  storage_types.rs  test.rs  test_agreement_pause.rs  test_disputes.rs  test_milestones.rs  test_upgrade.rs  token_swap.rs  utils.rs  webhook_contract.rs  webhooks.rs  webhooks_simple.rs
onchain/contracts/stello_pay_contract/src/tests/: mod.rs  test_agreement_pause.rs  test_backup.rs  test_claim_milestone_transfer.rs  test_create_or_update_escrow.rs  test_edge_cases.rs  test_employer_deposit_base_salary.rs  test_financial_features.rs  test_insurance.rs  test_mfa.rs  test_pause_and_resume_employee.rs  test_pause_and_unpause.rs  test_payroll.rs  test_payroll_hiisotry_and_audittrail.rs  test_payroll_history_and_audittrail.rs  test_record.rs  test_recurring_payments.rs  test_reject_milestone.rs  test_reporting_compliance.rs  test_scheduling.rs  test_security.rs  test_templates.rs  test_upgrade.rs  test_webhooks.rs  test_webhooks_minimal.rs  test_webhooks_simple.rs  test_webhooks_standalone.rs
onchain/contracts/stello_pay_contract/test_snapshots/: test_claim_multiple_times_accumulative.1.json  test_claim_partial_periods.1.json  test_claim_payroll_insufficient_escrow.1.json  test_claim_payroll_invalid_employee_index.1.json  test_claim_payroll_no_periods_to_claim.1.json  test_claim_payroll_success.1.json  test_claim_payroll_unauthorized.1.json  test_claiming_during_grace_period.1.json  test_claiming_unapproved_milestone_fails.1.json  test_different_salaries_per_employee.1.json  test_dispute_flow.1.json  test_dispute_payroll_distribution.1.json  test_double_pause.1.json  test_get_employee_claimed_periods.1.json  test_milestone_workflow_happy_path.1.json  test_multiple_employees_independent_claiming.1.json  test_pause_resume_flow.1.json  test_raise_dispute_non_arbiter.1.json  test_raise_dispute_outisde_grace_period.1.json  test_resolve_dispute_invalid_payout.1.json  test_resume_not_paused.1.json
onchain/contracts/stello_pay_contract/test_snapshots/test_disputes/: test_dispute_flow.1.json  test_dispute_payroll_distribution.1.json  test_raise_dispute_outisde_grace_period.1.json  test_resolve_dispute_ivalied_payout.1.json
onchain/contracts/stello_pay_contract/test_snapshots/test_upgrade/: test_upgrade_flow.1.json  (+1 more)
onchain/contracts/stello_pay_contract/tests/: audit_logger_tests.rs  backup_recovery_tests.rs  build_target_tests.rs  ci_security_tests.rs  gas_benchmarks.rs  invariant_tests.rs  price_oracle_integration_tests.rs  stello_pay_contract.wasm  test_agreement.rs  test_audit_employer_filter.rs  test_backup_recovery.rs  test_batch_claim_failure_events.rs  test_batch_creation.rs  test_boundary_conditions.rs  test_concurrent_operations.rs  test_conditional_triggers.rs  test_dispute_integration.rs  test_disputes.rs  test_emergency_pause.rs  test_event_emissions.rs  test_fault_injection.rs  test_gas_optimization.rs  test_grace_period.rs  test_grace_period_extension.rs  test_milestone_auth_negative.rs  test_milestones.rs  test_milestones.rs.disabled  test_multi_currency.rs  test_multisig_integration.rs  test_overflow_protection.rs  test_pause_resume.rs  test_payment_failures.rs  test_payroll_claims.rs  test_payroll_error_discriminants.rs  test_rate_limiter_integration.rs  test_reentrancy.rs  test_reject_milestone.rs  test_state_machine.rs  test_time_based_claims.rs  test_upgrade.rs  (+2 more)
onchain/contracts/tax_withholding/: Cargo.toml
onchain/contracts/tax_withholding/src/: lib.rs
onchain/contracts/tax_withholding/tests/: test_tax.rs  test_versioning.rs
onchain/integration_tests/: Cargo.toml
onchain/integration_tests/src/: lib.rs
onchain/integration_tests/tests/: load.rs  test_dispute_escalation_integration.rs  test_expense_audit_integration.rs  test_expense_audit_logger_integration.rs  test_governance_timelock_integration.rs  test_rbac_employee_roles_integration.rs  test_retry_orchestration.rs  test_salary_adjustment_payroll.rs  test_salary_adjustment_payroll_integration.rs  test_token_vesting_payroll_integration.rs  test_workflows.rs
onchain/integration_tests/tests/load/: test_load.rs
tools/cli/: Cargo.toml  README.md  demo.sh
tools/cli/src/: commands.rs  config.rs  lib.rs  main.rs  utils.rs
tools/cli/tests/: integration_tests.rs
(+436 files in other folders)
