[package]
name = "integration_tests"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
stello_pay_contract = { path = "../contracts/stello_pay_contract" }
token_vesting = { path = "../contracts/token_vesting" }
payroll_escrow = { path = "../contracts/payroll_escrow" }
bonus_system = { path = "../contracts/bonus_system" }
payment_history = { path = "../contracts/payment_history" }
salary_adjustment = { path = "../contracts/salary_adjustment" }
dispute_escalation = { path = "../contracts/dispute_escalation" }
audit_logger = { path = "../contracts/audit_logger" }
employee_roles = { path = "../contracts/employee_roles" }
expense_reimbursement = { path = "../contracts/expense_reimbursement" }
governance = { path = "../contracts/governance" }
multisig = { path = "../contracts/multisig" }
payment_retry = { path = "../contracts/payment_retry" }
payment_scheduler = { path = "../contracts/payment_scheduler" }
rbac = { path = "../contracts/rbac" }
withdrawal_timelock = { path = "../contracts/withdrawal_timelock" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["alloc", "testutils"] }
