[package]
name = "price_oracle"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
stello_pay_contract = { path = "../stello_pay_contract" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["alloc", "testutils"] }

