[package]
name = "stello_pay_contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
hmac = { version = "0.12", default-features = false }
sha1 = { version = "0.10", default-features = false }

# For backup encryption and hashing (Soroban-compatible)
sha2 = { version = "0.10", default-features = false }
aes-gcm = { version = "0.10", default-features = false }
base64 = { version = "0.21", default-features = false }
soroban-token-sdk = "23.4.1"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["alloc", "testutils"] }
